# element

./: .docs-composerrc.mts  .editorconfig  .gitattributes  .gitignore  .lfsconfig  .npmrc  .prettierignore  .releaserc-next.js  .releaserc-regular.js  .releaserc.js  .releaserc.yaml  .stylelintrc.yml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER.md  LICENSE.md  README.md  angular.json  e2e-local.sh  element-translate.conf.json  eslint.config.js  karma-playwright-launcher.cjs  karma.shared.cjs  mkdocs.yml  package-lock.json  package.json  playwright-merge.config.ts  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  postversion.js  pyproject.toml  renovate.json5  tsconfig.json  tsdoc.json
.agents/skills/git-github/: SKILL.md
.gemini/: styleguide.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-and-test.yaml  build.yaml  main-branch.yaml  next-release.yaml  publish-documentation.yaml  pull-request.yaml  release.yaml  vrt-update.yaml
api-goldens/charts-ng/: index.api.md
api-goldens/charts-ng/cartesian/: index.api.md
api-goldens/charts-ng/chart/: index.api.md
api-goldens/charts-ng/circle/: index.api.md
api-goldens/charts-ng/common/: index.api.md
api-goldens/charts-ng/custom-legend/: index.api.md
api-goldens/charts-ng/gauge/: index.api.md
api-goldens/charts-ng/loading-spinner/: index.api.md
api-goldens/charts-ng/progress/: index.api.md
api-goldens/charts-ng/progress-bar/: index.api.md
api-goldens/charts-ng/sankey/: index.api.md
api-goldens/charts-ng/sunburst/: index.api.md
api-goldens/dashboards-ng/: index.api.md
api-goldens/dashboards-ng/module-federation/: index.api.md
api-goldens/element-ng/: index.api.md
api-goldens/element-translate-ng/: index.api.md
api-goldens/live-preview/: index.api.md
api-goldens/native-charts-ng/: index.api.md
docs/: CHANGELOG.md  README.md  index.md
docs/architecture/: css-framework.md  dynamic-forms.md  motion-animation.md  resize-observer.md  theming.md  ui-state.md
docs/components/: index.md
docs/fundamentals/: elevation.md  icons.md  illustrations.md  localization.md  shapes.md  typography.md
docs/get-started/: element-mcp.md  quickstart.md
docs/patterns/: backdrop.md  drag-and-drop.md  filter.md  index.md  loading.md  notifications.md
docs/update-guides/: update-v49.md
playwright/: tsconfig.json
playwright/reporters/: playwright-axe-reporter.ts
playwright/support/: test-helpers.ts
projects/charts-ng/: README.md  eslint.config.js  karma.conf.cjs  ng-package.json  package.json  public-api.module.ts  public-api.ts  tsconfig.lib.json
projects/dashboards-demo/: eslint.config.js  federation.config.js  federation.config.mjs  karma.conf.cjs  package.json  tsconfig.app.json  tsconfig.app.prod.json  webpack.config.cjs
projects/dashboards-ng/: README.md  eslint.config.js  karma.conf.cjs  ng-package.json  package.json  tsconfig.docs.json  tsconfig.json  tsconfig.lib.json  tsconfig.spec.json
projects/docs-builder/: pyproject.toml
projects/docs-builder/md_extension_element_docs/: extension.py
projects/docs-builder/mkdocs_element_docs_builder/: docs-builder.js
projects/element-docs-builder/: pyproject.toml
projects/element-docs-builder/md_extension_element_docs/: extension.py
projects/element-docs-builder/md_extension_element_docs_composer/: __init__.py  extension.py
projects/element-docs-builder/mkdocs_element_docs_builder/: docs-builder.css  docs-builder.js  index.mjs  plugin.py
projects/element-ng/: docs.ts  element-ng.scss  eslint.config.js  karma.conf.cjs  ng-package.json  package.json  public-api.ts  tsconfig.docs.json  tsconfig.json  tsconfig.lib.json  tsconfig.schematics.json  tsconfig.spec.json
projects/element-theme/: LICENSE.md  package.json
projects/element-translate-cli/: package.json
projects/element-translate-ng/: README.md  eslint.config.js  karma.conf.cjs  ng-package.json  package.json  public-api.ts  tsconfig.json  tsconfig.lib.json  tsconfig.spec.json
projects/icon-viewer/: eslint.config.js  package.json
projects/live-preview/: README.md  component-loader.cjs  esbuild-component-loader.mjs  eslint.config.js  live-preview-routes.ts  ng-package.json  package.json  public-api.module.ts  public-api.ts  public-api.webcomponents.ts  tsconfig.json  tsconfig.lib.json
projects/map-styles/: README.md  eslint.config.js  ng-package.json  package.json  public-api.ts  tsconfig.lib.json  tsconfig.spec.json
projects/maps-ng/: README.md  eslint.config.js  ng-package.json  package.json  tsconfig.lib.json  tsconfig.spec.json
projects/native-charts-ng/: README.md  eslint.config.js  karma.conf.cjs  ng-package.json  package.json  public-api.module.ts  public-api.ts  tsconfig.json  tsconfig.lib.json
src/: index.html  main.ts  styles-webpack.scss  styles.scss  tsconfig.app.json  tsconfig.app.prod.json
src/app/: app.component.ts  app.config.ts  webpack-translate-loader.ts
src/environments/: environment.ts
tools/api-goldens/: extract-api-goldens.ts
tools/release/: generate-versions.js  publish-development-docs.sh
tools/semantic-release/: sync-dist-package-versions.js
(+3024 files in other folders)
