[project]
name = "element"
version = "0.0.0"
description = "Siemens Element design system documentation."
authors = [{ name = "Siemens", email = "opensource@siemens.com" }]
license = "MIT"
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "mkdocs-code-siemens-code-docs-theme>=7.7.0,<8",
    "mkdocs-minify-html-plugin==0.3.1",
    "mkdocs-element-docs-builder",
]

[project.urls]
Homepage = "https://element.siemens.io"
Repository = "https://github.com/siemens/element.git"
Documentation = "https://element.siemens.io"

[tool.uv]
package = false

[[tool.uv.index]]
name = "code-docs-theme"
url = "https://code.siemens.com/api/v4/groups/3259/-/packages/pypi/simple"
explicit = true

[tool.uv.sources]
mkdocs-code-siemens-code-docs-theme = { index = "code-docs-theme" }
mkdocs-element-docs-builder = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "projects/element-docs-builder",
]
