[tool.poetry]
name = "mkdocs_element_docs_builder"
version = "1.0.0"
description = "Element Design System documentation and core components for web applications."
authors = ["Siemens AG <info@siemens.com>"]
license = "MIT"
readme = "../../README.md"
homepage = "https://github.com/siemens/element"
repository = "https://github.com/siemens/element.git"
documentation = "https://element.siemens.io"

[tool.poetry.plugins."mkdocs.plugins"]
element-docs-builder = "mkdocs_element_docs_builder.plugin:ElementDocsBuilderPlugin"

[tool.poetry.plugins."markdown.extensions"]
element-docs = "md_extension_element_docs.extension:ElementDocsExtension"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
