[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs_element_docs_builder"
version = "1.0.0"
description = "Element Design System documentation and core components for web applications."
authors = [{ name = "Siemens AG", email = "info@siemens.com" }]
requires-python = "~=3.11"
readme = "../../README.md"
license = "MIT"

[project.urls]
Homepage = "https://github.com/siemens/element"
Repository = "https://github.com/siemens/element.git"
Documentation = "https://element.siemens.io"


[tool.hatch.build.targets.wheel]
packages = ["md_extension_element_docs", "mkdocs_element_docs_builder"]

[project.entry-points."mkdocs.plugins"]
element-docs-builder = "mkdocs_element_docs_builder.plugin:ElementDocsBuilderPlugin"

[project.entry-points."markdown.extensions"]
element-docs = "md_extension_element_docs.extension:ElementDocsExtension"
